--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,15 +48,22 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@example.com
       PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION: "False"
+      PGADMIN_CONFIG_COOKIE_DEFAULT_SECURE: "False"
+      PGADMIN_CONFIG_COOKIE_SAMESITE: '"Lax"'
     ports:
       - "5050:80"
     depends_on:
       - db
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ./pgadmin/servers.json:/pgadmin4/servers.json
     networks:
       - my_next_job_network
 
 volumes:
   postgres_data:
+  pgadmin_data:
 
 networks:
   my_next_job_network:
