--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,6 @@ psycopg2-binary==2.9.9
 pydantic==2.5.0
 python-dotenv==1.0.0
 python-multipart==0.0.9
+click==8.1.7
+requests==2.31.0
+beautifulsoup4==4.12.2
